--- a/es_ES/LC_MESSAGES/happyBirthdayEmail.po
+++ b/es_ES/LC_MESSAGES/happyBirthdayEmail.po
@@ -11,4 +11,4 @@ msgid "SPECIAL_SURPRISE_WAITING"
 msgstr "Hay una sorpresa especial esperándote en Sudomemo."
 
 msgid "LOGON_ON_DS_TO_VIEW"
-msgstr "¡Inicia sesión en Sudomemo con un Nintendo DSi o 3DS para recibir tu regalo de cumpleaños!"
+msgstr "¡Inicia sesión en Sudomemo con una Nintendo DSi o 3DS para recibir tu regalo de cumpleaños!"
