--- a/es_ES/LC_MESSAGES/unreadComments.po
+++ b/es_ES/LC_MESSAGES/unreadComments.po
@@ -8,7 +8,7 @@ msgid "NO_UNREAD_COMMENTS"
 msgstr "No tienes comentarios sin leer."
 
 msgid "TAP_ON_FLIPNOTE_ID_TO_VISIT_COMMENTS"
-msgstr "Presiona en una Flipnote ID para visitar la página de comentarios."
+msgstr "Presiona en la ID de una Flipnote para visitar la página de comentarios."
 
 msgid "FLIPNOTE_ID"
 msgstr "Flipnote ID"
