--- a/es_ES/LC_MESSAGES/browseFlipnotes.po
+++ b/es_ES/LC_MESSAGES/browseFlipnotes.po
@@ -17,7 +17,7 @@ msgid "HEADER_NO_SPINOFFS"
 msgstr "Sin Spin-offs"
 
 msgid "HEADER_ROLEPLAYS"
-msgstr "Juegos de Rol"
+msgstr "Roleplay"
 
 msgid "HEADER_BROWSE_FLIPNOTES"
 msgstr "Navegar entre las Flipnotes"
@@ -26,7 +26,7 @@ msgid "HEADER_FEATURED_FLIPNOTES"
 msgstr "Flipnotes Destacadas"
 
 msgid "HEADER_RANDOM_FLIPNOTES"
-msgstr "Random Flipnotes"
+msgstr "Flipnotes aleatorias"
 
 msgid "HEADER_PAGE"
 msgstr "Página"
@@ -50,7 +50,7 @@ msgid "CATEGORY_recent"
 msgstr "Flipnotes Recientes"
 
 msgid "CATEGORY_hot"
-msgstr "Flipnotes Recientes"
+msgstr "Flipnotes en Tendencia"
 
 msgid "CATEGORY_popular"
 msgstr "Las más Populares"
@@ -59,8 +59,8 @@ msgid "CATEGORY_featured"
 msgstr "Flipnotes Destacadas"
 
 msgid "CATEGORY_random"
-msgstr "@Random Flipnotes"
+msgstr "@Flipnotes aleatorias"
 
 msgid "CATEGORY_feed"
-msgstr "@Feed"
+msgstr "@Flipnotes sindicadas"
 
