--- a/es_ES/LC_MESSAGES/detailsPage.po
+++ b/es_ES/LC_MESSAGES/detailsPage.po
@@ -17,7 +17,7 @@ msgid "HEADER_ORIGINAL_FLIPNOTE"
 msgstr "Ver la Flipnote original aquí."
 
 msgid "HEADER_NO_STARBEGGING_STAR_LIMIT"
-msgstr "Para prevenir exceso de estrellas, las estrellas amarillas estan limitadas a diez por Flipnote."
+msgstr "Para prevenir exceso de estrellas, las estrellas amarillas están limitadas a diez por Flipnote."
 
 msgid "HEADER_CREATOR"
 msgstr "Creador"
@@ -74,7 +74,7 @@ msgid "SET_TITLE_INSTRUCTIONS"
 msgstr "Ingresa el nuevo título para tu Flipnote debajo."
 
 msgid "40_CHARACTER_LIMIT"
-msgstr "Tu título esta limitado a 40 caractéres de longitud."
+msgstr "Tu título está limitado a 40 caractéres de longitud."
 
 msgid "LEAVE_BLANK_TO_RESET"
 msgstr "Para restablecer el título como predeterminado, deja el formulario en blanco a la hora de subirlo."
@@ -107,9 +107,9 @@ msgid "HEADER_FLIPNOTE_OPTIONS"
 msgstr "Opciones"
 
 msgid "HEADER_SONG"
-msgstr "Song"
+msgstr "Tema"
 
 # This is shown to logged-in users on their own Flipnotes without titles
 
 msgid "UNTITLED_FLIPNOTE_BY_FORMAT"
-msgstr "Untitled Flipnote by %s"
+msgstr "lipnote sin título por %s"
