--- a/es_ES/LC_MESSAGES/detailsPage.po
+++ b/es_ES/LC_MESSAGES/detailsPage.po
@@ -112,4 +112,4 @@ msgstr "Tema"
 # This is shown to logged-in users on their own Flipnotes without titles
 
 msgid "UNTITLED_FLIPNOTE_BY_FORMAT"
-msgstr "lipnote sin título por %s"
+msgstr "Flipnote sin título por %s"
