--- a/es_ES/LC_MESSAGES/chatrooms.po
+++ b/es_ES/LC_MESSAGES/chatrooms.po
@@ -16,7 +16,7 @@ msgid "HEADER_NEXT"
 msgstr "Siguiente"
 
 msgid "HEADER_PREV"
-msgstr "Página Anterior"
+msgstr "Página anterior"
 
 msgid "HEADER_REFRESH"
 msgstr "Actualizar"
@@ -28,19 +28,19 @@ msgid "CHAT_REPLY_FAILED"
 msgstr "Ha ocurrido un error al publicar el comentario. Intenta de nuevo en unos momentos."
 
 msgid "NO_BLANK_MESSAGES_ALLOWED"
-msgstr "¡No puedes publicar un comentario vacio!"
+msgstr "¡No puedes publicar un comentario vacío!"
 
 msgid "FLIPNOTE_DATA_CORRUPTED"
-msgstr "Los datos de esta Flipnote estan dañados. Intenta de nuevo en un momento."
+msgstr "Los datos de esta Flipnote están dañados. Intenta de nuevo en unos momentos."
 
 msgid "NO_CHAT_MESSAGES_WHILE_MUTED"
-msgstr "Has sido silenciado. No podrás publicar comentarios."
+msgstr "Acaban de silenciarte. No podrás publicar comentarios."
 
 msgid "DUPLICATE_COMMENT_FAILED"
 msgstr "Este comentario ya ha sido publicado."
 
 msgid "COMMENT_FAILED_USER_BANNED"
-msgstr "Has sido restringido de publicar comentarios."
+msgstr "Acaban de restringirte de publicar comentarios."
 
 msgid "CONFIRM_EMAIL_BEFORE_POSTING"
 msgstr "Por favor, confirma tu correo antes de publicar."
