--- a/es_ES/LC_MESSAGES/colorPicker.po
+++ b/es_ES/LC_MESSAGES/colorPicker.po
@@ -4,10 +4,10 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 
 msgid "SET_PEN_COLOR"
-msgstr "Establecer el color de la pluma"
+msgstr "Establecer el color de la pluma."
 
 msgid "SET_PAPER_COLOR"
-msgstr "Establecer el color del papel"
+msgstr "Establecer el color del papel."
 
 msgid "SELECT_A_COLOR"
 msgstr "Elije un color."
@@ -16,7 +16,7 @@ msgid "CURRENT_COLOR"
 msgstr "Color actual:"
 
 msgid "CURRENT_COLOR_DEFAULT"
-msgstr "Color actual: por defecto"
+msgstr "Color actual: por defecto."
 
 msgid "RETURN"
 msgstr "Regresar"
